Closed Bug 1585818 Opened 6 years ago Closed 6 years ago

MayNeedToLoadXBLBinding shouldn't need to check for object or embed anymore.

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox71 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

I don't think we ever attach bindings to these.

They no longer load bindings since quite a while ago.

Blocks: 1585819
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ff9b6e41dabc Don't check for <html:object> or <html:embed> in MayNeedXBLBinding. r=bzbarsky
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: