Bug 1585818 - Don't check for <html:object> or <html:embed> in MayNeedXBLBinding. r=bzbarsky

They no longer load bindings since quite a while ago.

Differential Revision: https://phabricator.services.mozilla.com/D47989

--HG--
extra : moz-landing-system : lando