dom/base/Element.cpp
@@ -534,19 +534,16 @@ static bool IsLikelyCustomElement(const nsXULElement& aElement) {
 
 static bool MayNeedToLoadXBLBinding(const Document& aDocument,
                                     const Element& aElement) {
+  auto* xulElem = nsXULElement::FromNode(aElement);
+  if (!xulElem) {
+    return false;
+  }
   // If we have a frame, the frame has already loaded the binding.
-  // Otherwise, don't do anything else here unless we're dealing with
-  // XUL or an HTML element that may have a plugin-related overlay
-  // (i.e. object or embed).
+  // Otherwise, don't do anything else here unless we're dealing with XUL.
   if (!aDocument.GetPresShell() || aElement.GetPrimaryFrame()) {
     return false;
   }
-
-  if (auto* xulElem = nsXULElement::FromNode(aElement)) {
-    return !IsLikelyCustomElement(*xulElem);
-  }
-
-  return aElement.IsAnyOfHTMLElements(nsGkAtoms::object, nsGkAtoms::embed);
+  return !IsLikelyCustomElement(*xulElem);
 }
 
 StyleUrlOrNone Element::GetBindingURL(Document* aDocument) {
@@ -592,7 +589,7 @@ JSObject* Element::WrapObject(JSContext* aCx,
 
     // In theory we could call ExecuteAttachedHandler here when it's safe to
     // run script if we also removed the binding from the PAQ queue, but that
-    // seems like a scary change that would mosly just add more
+    // seems like a scary change that would mostly just add more
     // inconsistencies.
     return obj;
   }
